# samosa

./: .gitignore  LICENSE  README.md  pyproject.toml
.samosa/: config.yaml
.samosa/commands/: example.py
src/samosa/: __init__.py  cli.py  plugins.py  utils.py
src/samosa/commands/: __init__.py  dev.py  git.py  local.py  utils.py
src/samosa/tasks/: __init__.py  build.py  config.py  database.py  development.py  git.py  security.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_commands_integration.py  test_invoked_decorator.py  test_plugins.py  test_utils.py
